# open-payments-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  cargo-deny.toml  release.toml
.github/: PULL_REQUEST_TEMPLATE.md  contributing.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature-or-feature-subtask.md
.github/workflows/: ci.yml  publish.yml  release-automation.yml  release.yml
http-signature-utils/: Cargo.toml  README.md
http-signature-utils/examples/: generate_signature.rs
http-signature-utils/src/: error.rs  jwk.rs  lib.rs  signatures.rs  utils.rs  validation.rs
op-client/: Cargo.toml
op-client/src/: api.rs  client.rs  config.rs  error.rs  grant.rs  lib.rs  payments.rs  quotes.rs  request.rs  token.rs  types.rs  utils.rs  wallet_address.rs
op-client/tests/integration/: .env.example  common.rs  grant.rs  incoming_payment.rs  outgoing_payment.rs  quote.rs  token.rs  wallet_address.rs
op-types/: Cargo.toml  build.rs
op-types/src/: auth.rs  common.rs  lib.rs  resource.rs  wallet_address.rs
open-payments-snippets-rust/: .env.example  Cargo.toml  README.md
open-payments-snippets-rust/examples/: payment-flow.md
open-payments-snippets-rust/src/grant/: cancel.rs  continuation.rs  incoming_payment.rs  outgoing_payment.rs  quote.rs
open-payments-snippets-rust/src/incoming_payment/: complete.rs  create.rs  get.rs  list.rs
open-payments-snippets-rust/src/outgoing_payment/: create.rs  get.rs  list.rs
open-payments-snippets-rust/src/quote/: create.rs  create_with_debit_amount.rs  create_with_receive_amount.rs  get.rs
open-payments-snippets-rust/src/token/: revoke.rs  rotate.rs
open-payments-snippets-rust/src/utils/: mod.rs
open-payments-snippets-rust/src/wallet_address/: get.rs  get_keys.rs
openapi-definitions/: resource-server.yaml  wallet-address-server.yaml
openapi-to-jsonschema/: Cargo.toml
openapi-to-jsonschema/src/: lib.rs  main.rs
src/: lib.rs
src/client/: api.rs  config.rs  core.rs  error.rs  grant.rs  mod.rs  payments.rs  quotes.rs  request.rs  token.rs  utils.rs  wallet_address.rs
src/http_signature/: error.rs  jwk.rs  mod.rs  signatures.rs  utils.rs  validation.rs
src/http_signature/examples/: README.md  generate_signature.rs
src/snippets/: README.md
src/snippets/examples/: payment-flow.md
src/snippets/grant/: cancel.rs  continuation.rs  incoming_payment.rs  outgoing_payment.rs  quote.rs
src/snippets/incoming_payment/: complete.rs  create.rs  get.rs  list.rs
src/snippets/outgoing_payment/: create.rs  get.rs  list.rs
src/snippets/quote/: create.rs  create_with_debit_amount.rs  create_with_receive_amount.rs  get.rs
src/snippets/token/: revoke.rs  rotate.rs
src/snippets/utils/: mod.rs
src/snippets/wallet_address/: get.rs  get_keys.rs
src/types/: auth.rs  common.rs  mod.rs  resource.rs  wallet_address.rs
tests/: client_request_tests.rs  types_roundtrip.rs
tests/integration/: .env.example  common.rs  grant.rs  incoming_payment.rs  mod.rs  outgoing_payment.rs  quote.rs  token.rs  wallet_address.rs
