[package]
name = "http-signature-utils"
version = "0.1.0"
edition = "2021"
description = "HTTP Signature utilities for Open Payments"

[dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.21"
http = "1.0"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[[example]]
name = "generate_signature"
path = "examples/generate_signature.rs"
