[package]
name = "http-signature-utils"
version = "0.1.0"
edition = "2021"
description = "HTTP Signature utilities for Open Payments"

[dependencies]
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
base64 = "0.22.1"
http = "1.0"
chrono = "0.4.41"
rand = "0.8"
log = "0.4"
pkcs8 = "0.10"
pem = "3.0"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
env_logger = "0.11.8"
tempfile = "3.8"

[[example]]
name = "generate_signature"
path = "examples/generate_signature.rs"
