[package]
name = "op-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ed25519-dalek = { version = "2.1.1", features = ["std"] }
base64 = "0.21"

# Generated types from op-types
op-types = { path = "../op-types" }

# HTTP signature utilities
http-signature-utils = { path = "../http-signature-utils" }
