[package]
name = "op-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
ed25519-dalek = { version = "2.1.1", features = ["std"] }
http = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
url = "2.4"

# Generated types from op-types
op-types = { path = "../op-types" }

# HTTP signature utilities
http-signature-utils = { path = "../http-signature-utils" }

[dev-dependencies]
mockito = "1.4"
rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15"
tracing-subscriber = "0.3"
