[package]
name = "op-types"
version = "0.1.0"
edition = "2021"

[dependencies]
typify = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
chrono = { version = "0.4.35", features = ["serde"] }
regress = "0.10.3"

[build-dependencies]
typify = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
schemars = "0.8"
openapi-to-jsonschema = { path = "../openapi-to-jsonschema" }
# rustfmt-wrapper = "0.2.1"