[package]
name = "open-payments-snippets-rust"
version = "0.1.0"
edition = "2021"
description = "Open Payments code snippets using the Rust client"

[dependencies]
op-client = { path = "../op-client" }
op-types = { path = "../op-types" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.8"
base64 = "0.22.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
http-signature-utils = { path = "../http-signature-utils" }
url = "2.4"
chrono = "0.4"
uuid = { version = "1.16", features = ["v4", "serde"] }

[[bin]]
name = "grant-cancel"
path = "src/grant/cancel.rs"

[[bin]]
name = "grant-continuation"
path = "src/grant/continuation.rs"

[[bin]]
name = "grant-incoming-payment"
path = "src/grant/incoming_payment.rs"

[[bin]]
name = "grant-outgoing-payment"
path = "src/grant/outgoing_payment.rs"

[[bin]]
name = "grant-quote"
path = "src/grant/quote.rs"

[[bin]]
name = "incoming-payment-create"
path = "src/incoming_payment/create.rs"

[[bin]]
name = "incoming-payment-complete"
path = "src/incoming_payment/complete.rs"

[[bin]]
name = "incoming-payment-get"
path = "src/incoming_payment/get.rs"

[[bin]]
name = "incoming-payment-list"
path = "src/incoming_payment/list.rs"

[[bin]]
name = "outgoing-payment-create"
path = "src/outgoing_payment/create.rs"

[[bin]]
name = "outgoing-payment-get"
path = "src/outgoing_payment/get.rs"

[[bin]]
name = "outgoing-payment-list"
path = "src/outgoing_payment/list.rs"

[[bin]]
name = "quote-create"
path = "src/quote/create.rs"

[[bin]]
name = "quote-create-debit-amount"
path = "src/quote/create_with_debit_amount.rs"

[[bin]]
name = "quote-create-receive-amount"
path = "src/quote/create_with_receive_amount.rs"

[[bin]]
name = "quote-get"
path = "src/quote/get.rs"

[[bin]]
name = "wallet-address-get"
path = "src/wallet_address/get.rs"

[[bin]]
name = "wallet-address-get-keys"
path = "src/wallet_address/get_keys.rs"

[[bin]]
name = "token-revoke"
path = "src/token/revoke.rs"

[[bin]]
name = "token-rotate"
path = "src/token/rotate.rs"
